--- a/gallery.html
+++ b/gallery.html
@@ -21,14 +21,14 @@
     <main>
         <h2>Фотографии</h2>
         <div class="gallery">
-            <img src="F:\python\vs\img\photo1.jpg" alt="Фото 1">
-            <img src="F:\python\vs\img\photo2.jpg" alt="Фото 2">
-            <img src="F:\python\vs\img\photo3.jpg" alt="Фото 3">
-            <img src="F:\python\vs\img\photo4.jpg" alt="Фото 4">
-            <img src="F:\python\vs\img\photo5.jpg" alt="Фото 5">
-            <img src="F:\python\vs\img\photo6.jpg" alt="Фото 6">
-            <img src="F:\python\vs\img\photo7.jpg" alt="Фото 7">
-            <img src="F:\python\vs\img\photo8.jpg" alt="Фото 8">
+            <img src="img\photo1.jpg" alt="Фото 1">
+            <img src="img\photo2.jpg" alt="Фото 2">
+            <img src="img\photo3.jpg" alt="Фото 3">
+            <img src="img\photo4.jpg" alt="Фото 4">
+            <img src="img\photo5.jpg" alt="Фото 5">
+            <img src="img\photo6.jpg" alt="Фото 6">
+            <img src="img\photo7.jpg" alt="Фото 7">
+            <img src="img\photo8.jpg" alt="Фото 8">
         </div>
     </main>
     <footer>
