--- a/hobby.html
+++ b/hobby.html
@@ -23,7 +23,7 @@
         <p>Свободное время я люблю проводить в программе по написанию музыки "FL studio". Это позволяет мне выражать свои творческие идеи и экспериментировать с различными жанрами.
              Я наслаждаюсь процессом создания мелодий, подбора звуков и аранжировки треков. </p>
         <p>В FL Studio есть множество инструментов и эффектов, которые помогают мне достигать желаемого звучания. Я часто начинаю с простых мелодий,
-             а затем добавляю ударные и басовые линии, чтобы создать полноценный трек. Иногда я вдохновляюсь музыкой других исполнителей и стараюсь перенести свои любимые элементы в свои композиции.</p>
+             а затем добавляю ударные и басовые линии, чтобы создать полноценный трек.</p>
         <p>Мои песни есть на многих музыкальных площадках. Вот некоторые из них: 
             <a href="https://vk.com/artist/reqype_mtcxmzg5ntu3oq">ВКонтакте</a>, 
             <a href="https://music.yandex.ru/artist/21858153">Яндекс Музыка</a>
